--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pdfkit": "^0.16.0",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
