--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -13,9 +13,9 @@ jobs:
         run: |
           if [ ! -d "$HOME/.ssh" ]; then mkdir -p ~/.ssh; fi
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa-Adi
-          sudo chown -R $USER:$USER ~/.ssh
-          sudo chmod 600 ~/.ssh/id_rsa-Adi
-          sudo chmod 700 ~/.ssh
+          chown -R $USER:$USER ~/.ssh
+          chmod 600 ~/.ssh/id_rsa-Adi
+          chmod 700 ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
       - name: Checkout repository
