--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.11",
     "@toolpad/core": "^0.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.11"
