--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
     "@tailwindcss/vite": "^4.0.11",
     "@toolpad/core": "^0.12.0",
     "framer-motion": "^12.5.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.15",
