--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.11",
     "@toolpad/core": "^0.12.0",
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.5.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
+    "postcss": "^8.5.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
