--- a/frontend/docker-compose.prod.yml
+++ b/frontend/docker-compose.prod.yml
@@ -3,7 +3,7 @@ services:
   frontend-prod:
     build:
       context: .
-      dockerfile: Dockerfile.prod
+      dockerfile: ./Dockers/prod/Dockerfile
     container_name: eq-frontend-prod
     ports:
       - "8084:8084"
