--- a/frontend/docker-compose.staging.yml
+++ b/frontend/docker-compose.staging.yml
@@ -4,7 +4,7 @@ services:
   frontend-staging:
     build:
       context: .
-      dockerfile: Dockerfile.staging
+      dockerfile: ./Dockers/staging/Dockerfile
     container_name: eq-frontend-staging
     ports:
       - "8083:8082"
