--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,4 +1,4 @@
-name: MERN Stack CI/CD with SonarQube
+name: MERN Stack Code Quality Check
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-analyze:
+  sonarqube-analysis:
     runs-on: ubuntu-latest
     
     steps:
@@ -16,26 +16,6 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for better SonarQube analysis
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: |
-          npm ci
-          cd frontend && npm ci
-          cd ../backend && npm ci
-      
-      - name: Run tests
-        run: |
-          npm test
-      
-      - name: Build frontend
-        run: |
-          cd frontend && npm run build
-      
       - name: SonarQube Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
@@ -43,10 +23,9 @@ jobs:
           args: >
             -Dsonar.organization=your-org
             -Dsonar.projectKey=your-mern-app
-            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
             -Dsonar.sources=frontend/src,backend/src
-            -Dsonar.tests=frontend/src/__tests__,backend/src/__tests__
-            -Dsonar.exclusions=**/node_modules/**,**/*.test.js,**/build/**,**/dist/**
+            -Dsonar.exclusions=**/node_modules/**,**/build/**,**/dist/**,**/*.test.js
+            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
