--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,31 +1,27 @@
-name: MERN Stack Code Quality Check
+name: Build
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+
 
 jobs:
-  sonarqube-analysis:
+  build:
+    name: Build and analyze
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for better SonarQube analysis
-      
-      - name: SonarQube Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        with:
-          projectBaseDir: '.'
-          args: >
-            -Dsonar.organization=your-org
-            -Dsonar.projectKey=your-mern-app
-            -Dsonar.sources=frontend/src,backend/src
-            -Dsonar.exclusions=**/node_modules/**,**/build/**,**/dist/**,**/*.test.js
-            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: SonarSource/sonarqube-scan-action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: SonarSource/sonarqube-quality-gate-action@v1
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
