--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,21 +7,15 @@ on:
 
 
 jobs:
-  build:
-    name: Build and analyze
-    runs-on: ubuntu-latest
-    
+  sonar:
+    runs-on: self-hosted  # This makes GitHub Actions run on your Ubuntu machine
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: SonarSource/sonarqube-scan-action@v4
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # - uses: SonarSource/sonarqube-quality-gate-action@v1
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Run SonarQube Scan
+        run: |
+          sonar-scanner \
+            -Dsonar.host.url=http://192.168.0.104:9080 \
+            -Dsonar.login=$SONAR_TOKEN
+
