--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,7 @@ jobs:
       - name: Run SonarQube Scanner
         run: |
           /opt/sonar-scanner/bin/sonar-scanner \
-            -Dsonar.host.url=http://192.168.0.104:9080 \  # ✅ Ensure correct port (9080)
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-            -Dsonar.projectKey=sonartest \
-            -Dsonar.sources=.
-
-
+          -Dsonar.host.url=http://192.168.0.104:9080 \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -Dsonar.projectKey=sonartest \
+          -Dsonar.sources=.
