--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   analyze:
-    runs-on: self-hosted  # ✅ Uses your self-hosted runner named 'sonar'
+    runs-on: self-hosted  
 
     steps:
       - name: Checkout Code
