--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -1,22 +1,21 @@
-name: Frontend Build & SonarQube Scan
+name: Frontend Build Workflow
 
 on:
   push:
-    paths:
-      - 'frontend/**'
     branches:
       - main
+    paths:
+      - 'frontend/**'
+  workflow_dispatch:
 
 jobs:
-  build-frontend:
-    name: Build Frontend App
+  build:
     runs-on: [self-hosted, frontend]
-
     steps:
-      - name: Checkout Code  
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -31,19 +30,8 @@ jobs:
           cd frontend
           npm run build
 
-  analyze-frontend:
-    name: SonarQube Frontend Scan
-    runs-on: [self-hosted, sonartest]
-    needs: build-frontend
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Run SonarQube Scanner
-        run: |
-          /opt/sonar-scanner/bin/sonar-scanner \
-            -Dsonar.projectKey=frontend-app \
-            -Dsonar.sources=frontend/src \
-            -Dsonar.host.url=http://192.168.0.104:9080 \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      - name: Trigger SonarQube Scan
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          event-type: run-sonarqube
