--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, frontend]
+    runs-on: frontend
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
