--- a/.github/workflows/frontend-sonarqube.yml
+++ b/.github/workflows/frontend-sonarqube.yml
@@ -10,19 +10,28 @@ jobs:
     runs-on: sonar
 
     steps:
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-build
-          path: ./frontend-build
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: List Downloaded Files (Debug)
-        run: ls -R ./frontend-build
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install Dependencies
+        run: |
+          cd frontend
+          npm install
+
+      - name: Build Frontend (again)
+        run: |
+          cd frontend
+          npm run build
 
       - name: Run SonarQube Scanner
         run: |
           /opt/sonar-scanner/bin/sonar-scanner \
             -Dsonar.projectKey=frontend-app \
-            -Dsonar.sources=frontend-build/src \
+            -Dsonar.sources=frontend/src \
             -Dsonar.host.url=http://192.168.0.104:9000 \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
